Map Visibility Fix

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -36,8 +36,7 @@
         outline: none;
     }
     input[type=submit] {
-        color: var(--main-color-3);
-        background-color: #bda9c1;
+        background-color: var(--main-color-3);
         color: white;
         padding: 12px 20px;
         border: none;
