--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,12 +1,9 @@
-.map {}
-
 #map {
     width: 100%;
     height: 100%;
-    top: 0%;
-    display: none;
+    top: 100%;
+    opacity: 0;
     position: absolute;
-    //#marker1 {}
     filter: grayscale(100%); // margin-top: -24px;
 }
 
@@ -15,7 +12,6 @@
     height: 100%;
     top: 0%;
     position: absolute;
-    //#marker1 {}
     filter: grayscale(100%); // margin-top: -24px;
 }
 
@@ -23,4 +19,10 @@ h2 {
     color: var(--main-color-2);
     padding-left: 5%;
     padding-top: 2%;
+}
+
+h4 {
+    color: var(--main-color-3);
+    font-family: "FuturaLight";
+    font-size: 25px;
 }
